--- a/Frontend/src/app/compoments/Administration/creer-formulaire/creer-formulaire.component.html
+++ b/Frontend/src/app/compoments/Administration/creer-formulaire/creer-formulaire.component.html
@@ -1,1 +1,10 @@
-<p>creer-formulaire works!</p>
+<mat-toolbar class="toolbarmenue">
+    <div style="width: 80%;margin: auto">
+        <button mat-raised-button class="men-item-ad" routerLink="/Informatique/Nouveau">
+            Nouveau Formulaire
+        </button>&nbsp;&nbsp;
+        <button mat-raised-button class="men-item-ad" routerLink="/Informatique">
+            Voir les formulaires existant
+        </button>
+    </div>
+</mat-toolbar>
