--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <img src="../assets/img/logo.PNG" class="img">
-    <span class="titre">Generateur de formulaire Electronique</span>
+    <span class="titre">{{titre}}</span>
     <img src="../assets/img/images.png" class="img">
 </mat-toolbar>
 <router-outlet></router-outlet>
