--- a/Frontend/src/app/compoments/Administration/gerer-formulaire/gerer-formulaire.component.html
+++ b/Frontend/src/app/compoments/Administration/gerer-formulaire/gerer-formulaire.component.html
@@ -1,1 +1,51 @@
-<p>gerer-formulaire works!</p>
+<mat-toolbar class="toolbarmenue">
+    <div style="width: 80%;margin: auto">
+        <button mat-raised-button class="men-item-ad" routerLink="/Informatique/Nouveau">
+            Nouveau Formulaire
+        </button>&nbsp;&nbsp;
+        <button mat-raised-button class="men-item-ad" routerLink="/Informatique">
+            Voir les formulaires existant
+        </button>
+    </div>
+</mat-toolbar>
+<table mat-table [dataSource]="Donnee" id="customers">
+    <ng-container matColumnDef="Titre">
+        <th mat-header-cell *matHeaderCellDef>Titre&nbsp;</th>
+        <td mat-cell *matCellDef="let element"> {{element.titre}}&nbsp; </td>
+    </ng-container>
+    <ng-container matColumnDef="Administrateur">
+        <th mat-header-cell *matHeaderCellDef>Administrateur(s)&nbsp;</th>
+        <td mat-cell *matCellDef="let element"> {{element.Emailvalidation}}&nbsp; </td>
+    </ng-container>
+    <ng-container matColumnDef="liena">
+        <th mat-header-cell *matHeaderCellDef>Lien Administrateur&nbsp;</th>
+        <td mat-cell *matCellDef="let element"><a
+                [href]="Link+'Administration/'+element.date_creation">{{Link+"Administration/"+element.date_creation.substring(0, 10)}}...</a>&nbsp;
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="lienp">
+        <th mat-header-cell *matHeaderCellDef>Lien nouvelle demande&nbsp;</th>
+        <td mat-cell *matCellDef="let element"><a
+                [href]="Link+'Demande/'+element.date_creation">{{Link+"Demande/"+element.date_creation.substring(0, 10)}}...</a>&nbsp;
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="lienSui">
+        <th mat-header-cell *matHeaderCellDef>Lien suivis demande&nbsp;</th>
+        <td mat-cell *matCellDef="let element"><a
+                [href]="Link+'Suivre/'+element.date_creation">{{Link+"Suivre/"+element.date_creation.substring(0, 10)}}...</a>&nbsp;
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="act">
+        <th mat-header-cell *matHeaderCellDef class="mat-column-right">Actions</th>
+        <td mat-cell *matCellDef="let element" class="mat-column-right">
+            <button mat-button style="color: red" (click)="Supprimer(element._id)">
+                <mat-icon>delete</mat-icon>
+            </button>
+            <button mat-button color="primary" routerLink="/Informatique/{{element.date_creation}}">
+                <mat-icon>create</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="ColumnsInformation"></tr>
+    <tr mat-row *matRowDef="let row; columns: ColumnsInformation;"></tr>
+</table>
