--- a/Frontend/src/app/compoments/Demandes/nouvel-demande/nouvel-demande.component.html
+++ b/Frontend/src/app/compoments/Demandes/nouvel-demande/nouvel-demande.component.html
@@ -1,1 +1,82 @@
-<p>nouvel-demande works!</p>
+<div class="affiche_form_dem" *ngIf="code_demande==''">
+    <span *ngFor="let data_frm of FormData; let i=index">
+        <!--si titre-->
+        <h2 class="cadrant" *ngIf="data_frm.complexite==5 && data_frm.defaut=='Grand'">{{data_frm.nomChamp}}
+        </h2>
+        <h4 class="cadrant" *ngIf="data_frm.complexite==5 && data_frm.defaut=='Moyen'">{{data_frm.nomChamp}}
+
+        </h4>
+        <div class="input_vue_form" *ngIf="data_frm.complexite==5 && data_frm.defaut=='Petit'">{{data_frm.nomChamp}}
+
+        </div>
+        <!--si les type texte nombre et email date-->
+        <span *ngIf="data_frm.complexite==0">
+            <mat-form-field class="input_vue_form">
+                <input matInput [placeholder]="data_frm.nomChamp" (input)="save_Value(data_frm.type,data_frm.nomChamp,$event.target.value,data_frm.oblig,data_frm.send_texte)" [type]="data_frm.type" [value]="data_frm.defaut"
+                    [min]="data_frm.mini" [max]="data_frm.maxi" [required]="data_frm.oblig">
+            </mat-form-field>
+
+        </span>
+
+        <!--si les type checkbox-->
+        <span *ngIf="data_frm.complexite==1">
+            <div class="input_vue_form" style="display: inline-block;">
+                <mat-checkbox [required]="data_frm.oblig" [checked]="data_frm.defaut" (input)="save_Value(data_frm.type,data_frm.nomChamp,$event.target.checked,data_frm.oblig)">
+                    {{data_frm.nomChamp}}
+                </mat-checkbox>
+            </div>
+
+        </span>
+        <!--si les type texterea-->
+        <span *ngIf="data_frm.complexite==2">
+            <mat-form-field class="input_vue_form">
+                <textarea matInput [placeholder]="data_frm.nomChamp"  (input)="save_Value(data_frm.type,data_frm.nomChamp,$event.target.value,data_frm.oblig)" [rows]="data_frm.mini"
+                    [required]="data_frm.oblig"></textarea>
+            </mat-form-field>
+
+        </span>
+        <!--si les type radio boutton-->
+        <span *ngIf="data_frm.complexite==3">
+            <div class="input_vue_form" style="display: inline-block;">
+                <h5>{{data_frm.nomChamp}}</h5>
+                <mat-radio-group [required]="data_frm.oblig">
+                    <span *ngFor="let list of data_frm.list; let j=index">
+                        <mat-radio-button [value]="list" *ngIf="list==data_frm.defaut" (input)="save_Value(data_frm.type,data_frm.nomChamp,list)" checked>{{list}}
+                        </mat-radio-button>
+                        <mat-radio-button [value]="list" *ngIf="list!=data_frm.defaut" (input)="save_Value(data_frm.type,data_frm.nomChamp,list)">{{list}}</mat-radio-button>
+                        &nbsp;&nbsp;
+                    </span>
+                </mat-radio-group>
+            </div>
+
+        </span>
+        <!--si les type liste select-->
+        <span *ngIf="data_frm.complexite==4">
+            <mat-form-field class="input_vue_form">
+                <mat-select [(value)]="data_frm.defaut" [placeholder]="data_frm.nomChamp" [required]="data_frm.oblig" >
+                    <mat-option *ngFor="let list of data_frm.list; let j=index" [value]="list" (click)="save_Value(data_frm.type,data_frm.nomChamp,list,data_frm.oblig)">{{list}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </span>
+    </span>
+    <button [style.background-color]="style" class="btn_valide" (click)="EnregistrerDemande()"><mat-icon>send</mat-icon> {{formulaire.boutton.Nom}}</button>
+    <br><br>
+</div>
+<div *ngIf="code_demande!=''" #vu_succes>
+
+    <mat-card class="success_mess">
+        Votre demande a bien été enregistré, elle porte le numero <i><b style="color: red">{{code_demande}}</b></i><br>
+        Vous pouvez suivre son avancé via le lien ci-dessous<br>
+        <table style="width: 100%">
+            <tr>
+                <td style="width: 10%">Lien public</td>
+                <td style="width: 60%"><a [href]="Link+'Suivre/'+date_creation/code_demande">{{Link+"Suivre/"+date_creation.substring(0, 10)}}...</a>
+                    <input type="text" [value]="Link+'Suivre/'+date_creation+'/'+code_demande" style="width: 0%;background-color: #4a488d"
+                        #lien_partag></td>
+                <td style="width: 26%">
+                    <mat-icon style="cursor: pointer;" (click)="copier(lien_partag)">file_copy</mat-icon>
+                </td>
+            </tr>
+        </table>
+    </mat-card>
+</div>
